#### DOCU OF PACKAGE ####

### CHANGES (0.1)
* add several functions