@@ -8,4 +8,4 @@ Maintainer: Maintainer: Mark Heckmann <heckmann.mark@gmail.com>
 Description: Draws several graphical elements in circular way
 License: GPL (>= 3.0)
 VignetteBuilder: knitr
-Imports: pracma, plotrix, scales
+Imports: pracma, plotrix, scales, circular
